--- a/statistics.html
+++ b/statistics.html
@@ -101,7 +101,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statmodeling.stat.columbia.edu/2019/10/25/givewell-is-hiring-wants-someone-to-help-figure-out-how-to-give-well-bayesian-methods-may-be-relevant-here/'>Givewell is hiring; wants someone to help figure out how to give well; Bayesian methods may be relevant here ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
+<h5><a href='https://statmodeling.stat.columbia.edu/2019/10/25/givewell-is-hiring-wants-someone-to-help-figure-out-how-to-give-well-bayesian-methods-may-be-relevant-here/'>Givewell is hiring; wants someone to help figure out how to give well; Bayesian methods may be relevant here ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -203,7 +203,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/statistical-programmer-31535'>Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -232,7 +232,7 @@ science, or a related area by the time of appointment. Successful candidates?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
+<h5><a href='https://medtronic.referrals.selectminds.com/jobs/68635?lset=ru_RU'>Statistician - ????????????? ???? Medtronic</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 ??. ????? ... Participate in statistical support for CRF design, database development, data 
 validation plan and blinded data review; - Performs SAS programming to 
@@ -309,7 +309,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='https://jobs.hr.wisc.edu/en-us/job/503146/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.hr.wisc.edu/en-us/job/503146/lecturer-in-statistics'>LECTURER IN STATISTICS at UW?Madison</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -342,7 +342,7 @@ created School of Data Science, and other departments and schools. Faculty?...</
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7F688A9EE8'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/7F688A9EE8'>Statistics & Data Corporation (SDC) - Jobs: Clinical Data Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -361,7 +361,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/penumbrainc/799dfb11-cece-45eb-85b2-396edd58ac00'>Penumbra - Statistics Project Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/penumbrainc/799dfb11-cece-45eb-85b2-396edd58ac00'>Penumbra - Statistics Project Manager</a></h5> 
 <p><span class="badge badge-light">Alameda, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -463,7 +463,7 @@ Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-31265'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-31265'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
